[tool.poetry]
name = "kursach-3"
version = "0.1.0"
description = ""
authors = ["alex <enotasd@gmail.com>"]
readme = "README.md"
packages = [{include = "kursach_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
